CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (qMVG)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_DEFINITIONS(-std=c++11 )


FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
FIND_PACKAGE(Qt5Widgets REQUIRED)



ADD_EXECUTATBLE(qMVG  main.cpp  mvg.cpp  qMVG.cpp glviewer.cpp tum_dataset_reader.cpp)
