CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (qMVG)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin CACHE PATH "Output directory for applications" )

ADD_DEFINITIONS(-std=c++11 -Wno-deprecated-declarations )

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Xml REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(QGLViewer)
FIND_PACKAGE(Eigen3)

INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
ADD_EXECUTABLE(qMVG  qMVG.ui main.cpp  mvg.cpp  qMVG.cpp glviewer.cpp tum_dataset_reader.cpp)
TARGET_LINK_LIBRARIES(qMVG ${OPENGL_LIBRARY} Qt5::Widgets Qt5::Xml Qt5::OpenGL ${QGLVIEWER_LIBRARY} ${Boost_LIBRARIES} ${OpenCV_LIBRARIES}  )
